advanced debugging: use jmavsim_run.sh script instead of manual command